cnn_noBlock_singleThread/device/cnn.293088.temp/cnn.log
/homes/connie/opencl/CNN/cnn_noBlock_singleThread/device/cnn.cl:31:6: error: use of undeclared identifier 'ti'
        for(ti=0; ti<N_ifm; ti++) {
            ^
/homes/connie/opencl/CNN/cnn_noBlock_singleThread/device/cnn.cl:31:12: error: use of undeclared identifier 'ti'
        for(ti=0; ti<N_ifm; ti++) {
                  ^
/homes/connie/opencl/CNN/cnn_noBlock_singleThread/device/cnn.cl:31:22: error: use of undeclared identifier 'ti'
        for(ti=0; ti<N_ifm; ti++) {
                            ^
/homes/connie/opencl/CNN/cnn_noBlock_singleThread/device/cnn.cl:36:22: error: use of undeclared identifier 'ti'
                                ARRAY(weights,to,ti,i,j,M_ofm,N_ifm,K_wts,K_wts)*
                                                 ^
/homes/connie/opencl/CNN/cnn_noBlock_singleThread/device/cnn.cl:37:19: error: use of undeclared identifier 'ti'
                                ARRAY(input,0,ti,S_wts*row+i,S_wts*col+j,0,N_ifm,R_ifm,C_ifm);
                                              ^
5 errors generated.
